# wavedrawer3d

./: CMakeLists.txt  README
src/: CMakeLists.txt  color.cpp  color.hpp  divide_string.cpp  divide_string.hpp  draw.cpp  draw.hpp  help.cpp  help.hpp  libpicture.cpp  libpicture.hpp  main.cpp  makefile  point.cpp  point.hpp  point3d.cpp  point3d.hpp  settings.cpp  settings.hpp  stimulator.cpp  stimulator.hpp  test  test.cpp  wavedrawer3d
